--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,5 @@ requires-python = ">=3.12"
 dependencies = [
     "mcp[cli]>=1.13.0",
     "psycopg2>=2.9.10",
+    "python-dateutil>=2.9.0.post0",
 ]
